<resources>
    <string name="app_name">Recipes</string>
    <string name="recipe_for_you">Recipe for you</string>
    <string name="by_us">By us</string>
    <string name="explore_recipes">Explore Recipes</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered ?</string>
    <string name="password">Password</string>
    <string name="email_adress">Email Adress</string>
    <string name="full_name">Full Name</string>
    <string name="create_an_account">Create An Account</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_here">Register here</string>
    <string name="login_explore"><![CDATA[Login & Explore]]></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ingredient">Ingredient</string>
    <string name="recipe">Recipe</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="login_with_your_account">Login with your account</string>
    <string name="register_on_recipes">Register on recipes</string>
    <string name="logout">Logout</string>
    <string name="api_key">a56eaab418f84889842a974b9a07b2a9</string>
    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>

    <string name="looking_for_a_recipe">Looking for a recipe ?</string>
    <string name="recipes_saved">Recipes saved</string>
    <string name="ingredients">Ingredients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_saved_recently">Recipes saved recently</string>
</resources>