<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="none"

        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:cardCornerRadius="50dp"
                    app:cardBackgroundColor="?attr/colorSecondary"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/fruit_salad_rafiki" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/patrick_hand_sc"
                    android:text="Hey, let's cook!"
                    android:textAlignment="textEnd"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="34sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/input_outline_ui"
                android:drawableStart="@drawable/icon_search_24px"
                android:drawablePadding="7dp"
                android:drawableTint="@android:color/darker_gray"
                android:hint="@string/looking_for_a_recipe"
                android:inputType="textAutoComplete"
                android:padding="12dp"
                android:visibility="gone"
                tools:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corner"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/explore_recipes"
                        android:textStyle="bold"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_menu_book_24px"
                        app:tint="?attr/colorSecondary"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewRecipe"
                    android:layout_width="match_parent"
                    android:scrollbars="none"
                    tools:itemCount="5"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corner"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone"
                tools:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ingredients"
                        android:textAlignment="viewStart"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_nutrition_24px"
                        app:tint="?attr/colorSecondary" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewIngredient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none"
                    tools:itemCount="5">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corner"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/recipes_saved_recently"
                        android:textAlignment="viewStart"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_favorite_24px"
                        app:tint="?attr/colorSecondary" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewFavorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="3"
                    android:scrollbars="none">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>